# Odoo-Development-Automation

./: .continue-here.md  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  README.md  defaults.json  install.sh
python/: pyproject.toml
python/src/odoo_gen_utils/: __init__.py  artifact_state.py  auto_fix.py  cli.py  context7.py  edition.py  i18n_extractor.py  kb_validator.py  renderer.py  verifier.py
python/src/odoo_gen_utils/data/: enterprise_modules.json
python/src/odoo_gen_utils/mcp/: __init__.py
python/src/odoo_gen_utils/search/: __init__.py  analyzer.py  index.py  query.py  types.py
python/src/odoo_gen_utils/templates/: access_csv.j2  action.xml.j2  demo_data.xml.j2  init_models.py.j2  init_root.py.j2  init_tests.py.j2  init_wizards.py.j2  manifest.py.j2  menu.xml.j2  model.py.j2  readme.rst.j2  record_rules.xml.j2  security_group.xml.j2  sequences.xml.j2  test_model.py.j2  view_form.xml.j2  view_search.xml.j2  view_tree.xml.j2  wizard.py.j2  wizard_form.xml.j2
python/src/odoo_gen_utils/validation/: __init__.py  docker_runner.py  log_parser.py  pylint_runner.py  report.py  types.py
python/tests/: test_artifact_state.py  test_auto_fix.py  test_auto_fix_integration.py  test_cli_build_index.py  test_cli_lazy_imports.py  test_cli_validate.py  test_context7.py  test_dev_instance.py  test_docker_compose_path.py  test_docker_integration.py  test_docker_runner.py  test_e2e_index.py  test_edition.py  test_golden_path.py  test_i18n_extractor.py  test_log_parser.py  test_mcp_server.py  test_pylint_runner.py  test_render_stages.py  test_renderer.py  test_report.py  test_search_fork.py  test_search_index.py  test_search_query.py  test_validation_types.py  test_verifier.py  test_verifier_integration.py
python/tests/fixtures/: conftest.py
(+286 files in other folders)
