[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odoo-gen-utils"
version = "0.1.0"
description = "Python utilities for odoo-gen GSD extension"
requires-python = ">=3.12,<3.13"
dependencies = [
    "jinja2>=3.1",
    "click>=8.0",
]

[project.scripts]
odoo-gen-utils = "odoo_gen_utils.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/odoo_gen_utils"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
