[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odoo-gen-utils"
version = "0.1.0"
description = "Python utilities for odoo-gen GSD extension"
requires-python = ">=3.12,<3.13"
dependencies = [
    "jinja2>=3.1",
    "click>=8.0",
    "pylint-odoo>=10.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.9",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
search = [
    "chromadb>=1.5",
    "PyGithub>=2.8",
    "gitpython>=3.1",
]

[project.scripts]
odoo-gen-utils = "odoo_gen_utils.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/odoo_gen_utils"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
norecursedirs = ["tests/fixtures/docker_test_module"]
markers = [
    "e2e: End-to-end tests hitting real external services (GitHub API, ChromaDB). Skipped without GITHUB_TOKEN.",
    "e2e_slow: Full OCA index build (200+ repos, 3-5 min). Requires GITHUB_TOKEN.",
    "docker: Integration tests requiring Docker daemon. Skipped when Docker is unavailable.",
]
